<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeView"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:gravity="top">

        <include
            layout="@layout/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textSize="32dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homeLatestNews"
            android:textSize="16dp"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:fitsSystemWindows="true"
            android:layout_marginHorizontal="16dp">
            <androidx.constraintlayout.utils.widget.MockView
                android:id="@+id/mockView"
                android:layout_width="match_parent"
                android:layout_height="128dp" />

            <Button
                android:id="@+id/menu_item_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disasterInformation" />
            <Button
                android:id="@+id/menu_item_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emergencyContacts"/>
            <Button
                android:id="@+id/menu_item_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reportIncident" />
            <Button
                android:id="@+id/menu_item_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preparednessGuide"/>
            <Button
                android:id="@+id/menu_item_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mapView"/>

        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/drawer_header"
        android:fitsSystemWindows="false"/>

</androidx.drawerlayout.widget.DrawerLayout>